--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,35 @@
 body {
+    font-family: Gill Sans,Gill Sans MT,Calibri,sans-serif; 
     margin: 3%;
     color: rgb(40,40,40);
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
-h1 {
+footer {
+    color: rgb(166, 166, 166);
+    text-align: center;
+    padding: 3px;
+    margin-top: auto;
+}
+
+.title h4 {
+    font-size: 1vw;
+    text-align: center;
+    margin: .75vh 0;
+    height: 2vh;
+    padding: 1vh 0 1vh 1vw;
+    border-left:rgb(237, 237, 237) 3px solid;
+}
+
+.title h1 {
     margin: 0;
+    font-size: 4vw;
+}
+
+.title span {
+    font-size: .9vw;
 }
 
 a {
@@ -12,9 +37,17 @@ a {
     text-decoration:none;
 }
 
-.flex-container {
+.titleBox, .resumeBox {
     display: flex;
     flex-direction: row;
+}
+
+.resumeBox {
+    margin: .5vh 0;
+    width: 10vw;
+}
+
+.titleBox {
     /* box-shadow: 10px 10px 5px rgb(189, 189, 189); */
     box-shadow: 10px 10px 10px  rgba(230, 230, 230, 0.6);
     -moz-box-shadow: 10px 10px 10px  rgba(230, 230, 230, 0.6);
@@ -31,8 +64,9 @@ a {
 .title {
     border-bottom-right-radius: 0px;
     border-top-right-radius: 0px;
-    width: 20%;
-    border: rgb(88, 88, 88) .5px solid;
+    width: 13.5vw;
+    border: rgb(212, 212, 212) .5px solid;
+    border-right: none;
     padding-bottom: 0;
 }
 
@@ -42,15 +76,26 @@ a {
     border-top-left-radius: 0px;
     width: 80%;
     font-size: 2.5vmin;
-    border: rgb(88, 88, 88) .5px solid;
+    border: rgb(212, 212, 212) .5px solid;
+    
+}
+
+.file {
+    padding-top: 1.2vh;
+}
+
+.pdf:hover {
+    color: #459fff;
 }
 
 .socials {
-    padding-top: 5%;
+    border: rgb(212, 212, 212) .5px solid;
+    border-left: none;
 }
 
 .socials marquee {
-    width: 90%;
+    padding-top: 1.75vh;
+    width: 4.5vw;
 }
 
 #linkedIn:hover {
